--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <ul class="listt" >
             <a href="./birthday.png"><li>Birthday Wish Project</li></a>
             <a href="./anime.png"><li>Movie Ranking Project</li></a>
-            <a href="../10.3 Mondrian Project/goal.png"><li>Mondrian Project</li></a>
-            <a href="../11.3 TinDog Project/index.html"><li>TinDog Project</li></a>
+            <a href="./mondrian.png"><li>Mondrian Project</li></a>
+            <a href="./TinDog.png"><li>TinDog Project</li></a>
         </ul>
        
     </div>
